# HarmonySales-Music-Analysis

./: .gitignore  README.md  conf.py  pyproject.toml
TP2-Musical/: app.py  requirements.txt
TP2-Musical/data/: musical_dataset.ipynb
_build/doctrees/: environment.pickle  index.doctree
_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
